[package]
name = "sample-rust-apo"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.16.0"
widestring = "1.0.2"

[dependencies.windows]
version = "0.43.0"
features = [
    "interface",
    "implement",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Media_Audio_Apo",
]
